Bugfixes that everything works